# Flexion-Systems

./: README.md
Flexionization-Control-System/FCS-Investor-Package/: FCS-OnePager.md  Theory-Link.txt  UseOfFunds.md  ValuationAndInvestorShare.md
Flexionization-Control-System/FCS-SDK/: CMakeLists.txt  README.md
Flexionization-Control-System/FCS-SDK/docs/: INVESTOR-SLIDES.md  PITCH.md
Flexionization-Control-System/FCS-SDK/fcs-sdk/: CMakeLists.txt  README.md
Flexionization-Control-System/FCS-SDK/fcs-sdk/docs/: API-Reference.md  Integration-Guide-ROS2.md  Math-Background.md
Flexionization-Control-System/FCS-SDK/fcs-sdk/examples/: servo_position_control.cpp  simple_loop_test.cpp
Flexionization-Control-System/FCS-SDK/fcs-sdk/include/fcs/operators/: e_operator.h  f_operator.h
Flexionization-Control-System/FCS-SDK/fcs-sdk/src/: finv_operator.cpp  g_operator.cpp
Flexionization-Control-System/FCS-SDK/include/fcs/: fcs.h  fcs_config.h
Flexionization-Control-System/FCS-SDK/src/: f_operator.cpp  fcs.cpp
Flexionization-Control-System/FCS-Whitepaper/: FCS-Whitepaper-V1.1-EN-LaTex.tex  FCS-Whitepaper-v1.0.md  FCS-Whitepaper-v1.1-EN.md  README.md
Flexionization-Control-System/FCS-Whitepaper/docs/: FCS-Milestones-12m.md  FCS-PitchDeck.md  FCS-TechPage.md
Flexionization-Control-System/FCS-Whitepaper/docs/investor/: BudgetPlan.md
Flexionization-Control-System/FCS-Whitepaper/fcs-sdk/docs/: Integration-Guide-PX4.md  SDK-Overview.md
Next-Generation-Token/docs/: Next-Generation-Token-V2.0-EN-Latex.tex
(+4 files in other folders)
